Update mobile build workflows to support specific QA and Prod tags
- Modified the on_push_mobile_builds.yaml to trigger builds for branches and specific tags ('*-prod' and '*-qa').
- Added conditional checks for iOS QA and Prod builds to ensure correct environment handling.
- Commented out the previous tagged_build.yaml configurations for clarity and future reference.

This change enhances the build process by clearly defining when to trigger builds based on the environment, improving overall workflow maintainability.

--- a/.gitea/workflows/on_push_mobile_builds.yaml
+++ b/.gitea/workflows/on_push_mobile_builds.yaml
@@ -2,8 +2,11 @@ name: On Push Mobile Builds (iOS QA & Prod)
 
 on:
   push:
-    branches:
-      - '*'
+    branches: 
+    tags:
+      - '*-prod'
+      - '*-qa'
+
 jobs:
   # Android jobs commented out - uncomment to re-enable.
   # android_qa_build:
@@ -140,7 +143,9 @@ jobs:
   #         debugSymbols: artifacts/appbundle_symbols_prod.zip
   #
   ios_qa_build:
+    
     name: iOS QA IPA Build & Upload
+    if: endsWith(github.ref_name, '-qa')
     runs-on: workstation.mac
     env:
       FASTLANE_APPLE_API_KEY_ID: ${{ secrets.FASTLANE_APPLE_API_KEY_ID }}
@@ -226,6 +231,7 @@ jobs:
 
   ios_prod_build:
     name: iOS Prod IPA Build & Upload
+    if: endsWith(github.ref_name, '-prod')
     runs-on: workstation.mac
     env:
       FASTLANE_APPLE_API_KEY_ID: ${{ secrets.FASTLANE_APPLE_API_KEY_ID }}
