--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   image_picker: ^1.0.7
   intl: ^0.20.1
   mobile_scanner: ^7.1.3
+  package_info_plus: ^9.0.0
   provider: ^6.1.2
   qr: ^3.0.1
   share_plus: ^12.0.1
@@ -58,7 +59,6 @@ flutter:
     - images/qr-code-logo.png
     - images/payed.png
     - images/received.png
-    - .env
     - .env.prod
     - .env.qa
 
